@@ -3,6 +3,7 @@
 
 - terminer les detachable panels
 - terminate "getExportableGView" method in Debugger
+- do not analyze grammar when debugging in local
 - dot on Windows is usually located in "c:\Program Files\ATT\Graphviz\bin\dot.exe
 
 * Prio 2
